= RubyMotion 2.28 =

  * Fixed a performance issue in deallocating if many objects would be created.

= RubyMotion 2.27 =

  * Added support for localization `.strings' files which will be compiled as
    binary files. Thanks to Hwee-Boon Yar for the patch (pull request #154).
  * Added support for `NSLocalizedString' and friends. These are now available
    on `Kernel'.
  * Added missing AudioUnit bridgesupport metadata.
  * Improved the file dependencies detection code to spend less time when
    working on a project that has a significant number of dependencies.
    Thanks to Ignacio Piantanida for the detective work.
  * Fixed a regression introduced in RubyMotion 2.25 that was causing a
    build error in environment using Ruby 1.8.
  * Fixed a regression introduced in RubyMotion 2.25 that was causing a 
    `not precompiled' error if the method would handle a BOOL pointer as an
    argument.
  * Fixed a bug where Boxed subclasses could not be re-opened safely.
  * Fixed a bug which shortcut for the method which was implemented on Ruby
    would not respond.

= RubyMotion 2.26 =

  * Fixed a regression introduced in the previous release that was causing a
    crash when checking if a class supports weak references on iOS 6.

= RubyMotion 2.25 =

  * Added support for Xcode 5.1 and iOS 7.1 final.
  * Added support for OSX 10.6 as deployment target (experimental).
  * Improved user feedback by printing a warning when overriding a protocol
    method that was previously defined with one of the `attr_*' methods. This
    may print false positives.
  * Improved `rake ctags' to index the application's .rb files. Thanks to
    Hwee-Boon Yar for the patch (pull request #152).
  * Improved use of `WeakRef' to raise an exception when trying to create a
    weak reference to one of the unsupported classes. For more information, see
    `Which classes don’t support weak references?' at http://bit.ly/1iiSOaU.